--- a/index.css
+++ b/index.css
@@ -5,3 +5,30 @@
     border-color: blue;
     border-width: 3px;
 }
+
+.containerText {
+    width: 30vw;
+    height: 5vh;
+    margin-left: 10vw;
+    margin-top: 0vh;
+    border-color: black;
+    background-color: rgb(130, 130, 201);
+    text-align: center;
+    border-radius: 30px;
+}
+
+p{
+    font-size: 2.5vw;
+    margin-top: 0.3vh;
+}
+
+#StartGame {
+    position: absolute;
+    width: 15vw;
+    height: 5vh;
+    margin-left: 45vw;
+    margin-top: -5vh;
+    border-radius: 30px;
+    border-color: rgb(20, 20, 179);
+    background-color: rgb(228, 228, 228);
+}
